--- a/simple_import/templates/simple_import/match_columns.html
+++ b/simple_import/templates/simple_import/match_columns.html
@@ -40,5 +40,6 @@
         {% endfor %}
     </table>
     
-    <input type="submit"/>
+    <input type="submit" name="commit" value="Run actual import"/>
+    <input type="submit" name="simulate" value="Simulate import"/>
 </form>
