Added basic and not tested support for m2m fields Just a check point, not stable!

--- a/simple_import/templates/simple_import/match_columns.html
+++ b/simple_import/templates/simple_import/match_columns.html
@@ -54,6 +54,5 @@
         {% endfor %}
     </table>
     
-    <input type="submit" name="commit" value="Run actual import"/>
-    <input type="submit" name="simulate" value="Simulate import"/>
+    <input type="submit" value="Next"/>
 </form>
