Added header_position row as a hack to get the queryset in the right order based on the current file being imported It will break if the same user is importing different but spreadsheets of the same model at the same time. Seems unlikely.

--- a/simple_import/templates/simple_import/match_columns.html
+++ b/simple_import/templates/simple_import/match_columns.html
@@ -1,6 +1,7 @@
 <h1>Match columns</h1>
 <form action="" method="post">{% csrf_token %}
     {{ formset.management_form }}
+    {{ formset.errors }}
     {% if errors %}
         <ul>
             {% for error in errors %}
