Fixed #13 Added choices lookup

--- a/simple_import/templates/simple_import/match_columns.html
+++ b/simple_import/templates/simple_import/match_columns.html
@@ -1,7 +1,12 @@
 <h1>Match columns</h1>
 <form action="" method="post">{% csrf_token %}
     {{ formset.management_form }}
-    {{ formset.errors }}
+    
+    <ul>
+        {% for error in formset.errors %}
+          <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
     {% if errors %}
         <ul>
             {% for error in errors %}
