--- a/simple_import/templates/simple_import/match_columns.html
+++ b/simple_import/templates/simple_import/match_columns.html
@@ -1,4 +1,4 @@
-<h1>Match columns</h1>
+<h1>Match Columns</h1>
 <form action="" method="post">{% csrf_token %}
     {{ formset.management_form }}
     
