--- a/simple_import/templates/simple_import/match_relations.html
+++ b/simple_import/templates/simple_import/match_relations.html
@@ -11,7 +11,7 @@
     {% if existing_matches %}
         <p>
             Next you need to match how you reference related fields.
-            As an example let's say you are importing Students. Students can be refered to as their ID (ex 453) or Username (ex jstudent).
+            As an example let's say you are importing Students. Students can be referred to as their ID (ex. 453) or Username (ex. jstudent).
             We need to specify how to reference the student. You may select any unique field.
         </p>
         <table>
