Fixed media url when using non local storage Using .url instead of {{ MEDIA_URL }}

--- a/simple_import/templates/simple_import/do_import.html
+++ b/simple_import/templates/simple_import/do_import.html
@@ -15,7 +15,7 @@
 
 {% if fail_count %}
     Failed: {{ fail_count }} <br/>
-    <a href="{{ MEDIA_URL }}{{ import_log.error_file }}">Download failed records</a>
+    <a href="{{ import_log.error_file.url }}">Download failed records</a>
 {% endif %}
 
 
