--- a/simple_import/templates/simple_import/import.html
+++ b/simple_import/templates/simple_import/import.html
@@ -1,7 +1,14 @@
-<h1>Import</h1>
+{% extends "simple_import/base.html" %}
+
+{% block simple_import_page_title %}Import{% endblock %}
+
+{% block simple_import_title %}Import{% endblock %}
+
+{% block simple_import_form %}
 <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
     <table>
         {{ form.as_table }}
     </table>
     <input type="submit"/>
 </form>
+{% endblock %}
